src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaraciones -> declaraciones instruccion
Rule 3     declaraciones -> instruccion
Rule 4     instruccion -> asignacion
Rule 5     instruccion -> estructura_control
Rule 6     instruccion -> declaracion_funcion
Rule 7     instruccion -> llamada_funcion
Rule 8     instruccion -> impresion
Rule 9     instruccion -> entrada
Rule 10    instruccion -> expresion
Rule 11    asignacion -> VARIABLE_LOCAL ASIGNACION expresion
Rule 12    asignacion -> CONSTANTE ASIGNACION expresion
Rule 13    asignacion -> VARIABLE_LOCAL ASIGNACION estructura_datos
Rule 14    expresion -> expresion MAS expresion
Rule 15    expresion -> expresion MENOS expresion
Rule 16    expresion -> expresion POR expresion
Rule 17    expresion -> expresion DIVIDIDO expresion
Rule 18    expresion -> expresion MODULO expresion
Rule 19    expresion -> expresion IGUAL_QUE expresion
Rule 20    expresion -> expresion DIFERENTE expresion
Rule 21    expresion -> expresion MAYOR_IGUAL expresion
Rule 22    expresion -> expresion MENOR_IGUAL expresion
Rule 23    expresion -> expresion MAYOR expresion
Rule 24    expresion -> expresion MENOR expresion
Rule 25    expresion -> expresion AND expresion
Rule 26    expresion -> expresion OR expresion
Rule 27    expresion -> NOT expresion
Rule 28    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 29    expresion -> INTEGER
Rule 30    expresion -> FLOAT
Rule 31    expresion -> STRING
Rule 32    expresion -> TRUE
Rule 33    expresion -> FALSE
Rule 34    expresion -> NIL
Rule 35    expresion -> VARIABLE_LOCAL
Rule 36    expresion -> CONSTANTE
Rule 37    estructura_datos -> arreglo
Rule 38    estructura_datos -> hash
Rule 39    estructura_datos -> rango
Rule 40    arreglo -> CORCHETE_IZQ elementos_opt CORCHETE_DER
Rule 41    elementos_opt -> elementos
Rule 42    elementos_opt -> empty
Rule 43    elementos -> expresion
Rule 44    elementos -> expresion COMA elementos
Rule 45    hash -> LLAVE_IZQ pares_opt LLAVE_DER
Rule 46    pares_opt -> pares
Rule 47    pares_opt -> empty
Rule 48    pares -> STRING ASIGNACION_HASH expresion
Rule 49    pares -> STRING ASIGNACION_HASH expresion COMA pares
Rule 50    rango -> INTEGER RANGO INTEGER
Rule 51    estructura_control -> IF expresion declaraciones END
Rule 52    estructura_control -> IF expresion declaraciones ELSE declaraciones END
Rule 53    estructura_control -> WHILE expresion DO declaraciones END
Rule 54    estructura_control -> WHILE expresion declaraciones END
Rule 55    estructura_control -> FOR VARIABLE_LOCAL IN rango declaraciones END
Rule 56    declaracion_funcion -> DEF VARIABLE_LOCAL PAREN_IZQ parametros_opt PAREN_DER declaraciones END
Rule 57    declaracion_funcion -> DEF VARIABLE_LOCAL declaraciones END
Rule 58    parametros_opt -> parametros
Rule 59    parametros_opt -> empty
Rule 60    parametros -> VARIABLE_LOCAL
Rule 61    parametros -> VARIABLE_LOCAL COMA parametros
Rule 62    llamada_funcion -> VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
Rule 63    llamada_funcion -> RETURN expresion
Rule 64    impresion -> PUTS expresion
Rule 65    entrada -> VARIABLE_LOCAL ASIGNACION GETS
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AND                  : 25
ASIGNACION           : 11 12 13 65
ASIGNACION_HASH      : 48 49
COMA                 : 44 49 61
CONSTANTE            : 12 36
CORCHETE_DER         : 40
CORCHETE_IZQ         : 40
DEF                  : 56 57
DIFERENTE            : 20
DIVIDIDO             : 17
DO                   : 53
ELSE                 : 52
END                  : 51 52 53 54 55 56 57
FALSE                : 33
FLOAT                : 30
FOR                  : 55
GETS                 : 65
IF                   : 51 52
IGUAL_QUE            : 19
IN                   : 55
INTEGER              : 29 50 50
LLAVE_DER            : 45
LLAVE_IZQ            : 45
MAS                  : 14
MAYOR                : 23
MAYOR_IGUAL          : 21
MENOR                : 24
MENOR_IGUAL          : 22
MENOS                : 15
MODULO               : 18
NIL                  : 34
NOT                  : 27
OR                   : 26
PAREN_DER            : 28 56 62
PAREN_IZQ            : 28 56 62
POR                  : 16
PUTS                 : 64
RANGO                : 50
RETURN               : 63
STRING               : 31 48 49
TRUE                 : 32
VARIABLE_LOCAL       : 11 13 35 55 56 57 60 61 62 65
WHILE                : 53 54
error                : 

Nonterminals, with rules where they appear

arreglo              : 37
asignacion           : 4
declaracion_funcion  : 6
declaraciones        : 1 2 51 52 52 53 54 55 56 57
elementos            : 41 44
elementos_opt        : 40 62
empty                : 42 47 59
entrada              : 9
estructura_control   : 5
estructura_datos     : 13
expresion            : 10 11 12 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 43 44 48 49 51 52 53 54 63 64
hash                 : 38
impresion            : 8
instruccion          : 2 3
llamada_funcion      : 7
parametros           : 58 61
parametros_opt       : 56
pares                : 46 49
pares_opt            : 45
programa             : 0
rango                : 39 55

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) declaraciones -> . declaraciones instruccion
    (3) declaraciones -> . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . estructura_control
    (6) instruccion -> . declaracion_funcion
    (7) instruccion -> . llamada_funcion
    (8) instruccion -> . impresion
    (9) instruccion -> . entrada
    (10) instruccion -> . expresion
    (11) asignacion -> . VARIABLE_LOCAL ASIGNACION expresion
    (12) asignacion -> . CONSTANTE ASIGNACION expresion
    (13) asignacion -> . VARIABLE_LOCAL ASIGNACION estructura_datos
    (51) estructura_control -> . IF expresion declaraciones END
    (52) estructura_control -> . IF expresion declaraciones ELSE declaraciones END
    (53) estructura_control -> . WHILE expresion DO declaraciones END
    (54) estructura_control -> . WHILE expresion declaraciones END
    (55) estructura_control -> . FOR VARIABLE_LOCAL IN rango declaraciones END
    (56) declaracion_funcion -> . DEF VARIABLE_LOCAL PAREN_IZQ parametros_opt PAREN_DER declaraciones END
    (57) declaracion_funcion -> . DEF VARIABLE_LOCAL declaraciones END
    (62) llamada_funcion -> . VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
    (63) llamada_funcion -> . RETURN expresion
    (64) impresion -> . PUTS expresion
    (65) entrada -> . VARIABLE_LOCAL ASIGNACION GETS
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MODULO expresion
    (19) expresion -> . expresion IGUAL_QUE expresion
    (20) expresion -> . expresion DIFERENTE expresion
    (21) expresion -> . expresion MAYOR_IGUAL expresion
    (22) expresion -> . expresion MENOR_IGUAL expresion
    (23) expresion -> . expresion MAYOR expresion
    (24) expresion -> . expresion MENOR expresion
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . NOT expresion
    (28) expresion -> . PAREN_IZQ expresion PAREN_DER
    (29) expresion -> . INTEGER
    (30) expresion -> . FLOAT
    (31) expresion -> . STRING
    (32) expresion -> . TRUE
    (33) expresion -> . FALSE
    (34) expresion -> . NIL
    (35) expresion -> . VARIABLE_LOCAL
    (36) expresion -> . CONSTANTE

    VARIABLE_LOCAL  shift and go to state 11
    CONSTANTE       shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    DEF             shift and go to state 16
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    NOT             shift and go to state 20
    PAREN_IZQ       shift and go to state 17
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NIL             shift and go to state 26

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    asignacion                     shift and go to state 4
    estructura_control             shift and go to state 5
    declaracion_funcion            shift and go to state 6
    llamada_funcion                shift and go to state 7
    impresion                      shift and go to state 8
    entrada                        shift and go to state 9
    expresion                      shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (2) declaraciones -> declaraciones . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . estructura_control
    (6) instruccion -> . declaracion_funcion
    (7) instruccion -> . llamada_funcion
    (8) instruccion -> . impresion
    (9) instruccion -> . entrada
    (10) instruccion -> . expresion
    (11) asignacion -> . VARIABLE_LOCAL ASIGNACION expresion
    (12) asignacion -> . CONSTANTE ASIGNACION expresion
    (13) asignacion -> . VARIABLE_LOCAL ASIGNACION estructura_datos
    (51) estructura_control -> . IF expresion declaraciones END
    (52) estructura_control -> . IF expresion declaraciones ELSE declaraciones END
    (53) estructura_control -> . WHILE expresion DO declaraciones END
    (54) estructura_control -> . WHILE expresion declaraciones END
    (55) estructura_control -> . FOR VARIABLE_LOCAL IN rango declaraciones END
    (56) declaracion_funcion -> . DEF VARIABLE_LOCAL PAREN_IZQ parametros_opt PAREN_DER declaraciones END
    (57) declaracion_funcion -> . DEF VARIABLE_LOCAL declaraciones END
    (62) llamada_funcion -> . VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
    (63) llamada_funcion -> . RETURN expresion
    (64) impresion -> . PUTS expresion
    (65) entrada -> . VARIABLE_LOCAL ASIGNACION GETS
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MODULO expresion
    (19) expresion -> . expresion IGUAL_QUE expresion
    (20) expresion -> . expresion DIFERENTE expresion
    (21) expresion -> . expresion MAYOR_IGUAL expresion
    (22) expresion -> . expresion MENOR_IGUAL expresion
    (23) expresion -> . expresion MAYOR expresion
    (24) expresion -> . expresion MENOR expresion
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . NOT expresion
    (28) expresion -> . PAREN_IZQ expresion PAREN_DER
    (29) expresion -> . INTEGER
    (30) expresion -> . FLOAT
    (31) expresion -> . STRING
    (32) expresion -> . TRUE
    (33) expresion -> . FALSE
    (34) expresion -> . NIL
    (35) expresion -> . VARIABLE_LOCAL
    (36) expresion -> . CONSTANTE

    $end            reduce using rule 1 (programa -> declaraciones .)
    VARIABLE_LOCAL  shift and go to state 11
    CONSTANTE       shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    DEF             shift and go to state 16
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    NOT             shift and go to state 20
    PAREN_IZQ       shift and go to state 17
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NIL             shift and go to state 26

    instruccion                    shift and go to state 27
    asignacion                     shift and go to state 4
    estructura_control             shift and go to state 5
    declaracion_funcion            shift and go to state 6
    llamada_funcion                shift and go to state 7
    impresion                      shift and go to state 8
    entrada                        shift and go to state 9
    expresion                      shift and go to state 10

state 3

    (3) declaraciones -> instruccion .

    VARIABLE_LOCAL  reduce using rule 3 (declaraciones -> instruccion .)
    CONSTANTE       reduce using rule 3 (declaraciones -> instruccion .)
    IF              reduce using rule 3 (declaraciones -> instruccion .)
    WHILE           reduce using rule 3 (declaraciones -> instruccion .)
    FOR             reduce using rule 3 (declaraciones -> instruccion .)
    DEF             reduce using rule 3 (declaraciones -> instruccion .)
    RETURN          reduce using rule 3 (declaraciones -> instruccion .)
    PUTS            reduce using rule 3 (declaraciones -> instruccion .)
    NOT             reduce using rule 3 (declaraciones -> instruccion .)
    PAREN_IZQ       reduce using rule 3 (declaraciones -> instruccion .)
    INTEGER         reduce using rule 3 (declaraciones -> instruccion .)
    FLOAT           reduce using rule 3 (declaraciones -> instruccion .)
    STRING          reduce using rule 3 (declaraciones -> instruccion .)
    TRUE            reduce using rule 3 (declaraciones -> instruccion .)
    FALSE           reduce using rule 3 (declaraciones -> instruccion .)
    NIL             reduce using rule 3 (declaraciones -> instruccion .)
    $end            reduce using rule 3 (declaraciones -> instruccion .)
    END             reduce using rule 3 (declaraciones -> instruccion .)
    ELSE            reduce using rule 3 (declaraciones -> instruccion .)


state 4

    (4) instruccion -> asignacion .

    VARIABLE_LOCAL  reduce using rule 4 (instruccion -> asignacion .)
    CONSTANTE       reduce using rule 4 (instruccion -> asignacion .)
    IF              reduce using rule 4 (instruccion -> asignacion .)
    WHILE           reduce using rule 4 (instruccion -> asignacion .)
    FOR             reduce using rule 4 (instruccion -> asignacion .)
    DEF             reduce using rule 4 (instruccion -> asignacion .)
    RETURN          reduce using rule 4 (instruccion -> asignacion .)
    PUTS            reduce using rule 4 (instruccion -> asignacion .)
    NOT             reduce using rule 4 (instruccion -> asignacion .)
    PAREN_IZQ       reduce using rule 4 (instruccion -> asignacion .)
    INTEGER         reduce using rule 4 (instruccion -> asignacion .)
    FLOAT           reduce using rule 4 (instruccion -> asignacion .)
    STRING          reduce using rule 4 (instruccion -> asignacion .)
    TRUE            reduce using rule 4 (instruccion -> asignacion .)
    FALSE           reduce using rule 4 (instruccion -> asignacion .)
    NIL             reduce using rule 4 (instruccion -> asignacion .)
    $end            reduce using rule 4 (instruccion -> asignacion .)
    END             reduce using rule 4 (instruccion -> asignacion .)
    ELSE            reduce using rule 4 (instruccion -> asignacion .)


state 5

    (5) instruccion -> estructura_control .

    VARIABLE_LOCAL  reduce using rule 5 (instruccion -> estructura_control .)
    CONSTANTE       reduce using rule 5 (instruccion -> estructura_control .)
    IF              reduce using rule 5 (instruccion -> estructura_control .)
    WHILE           reduce using rule 5 (instruccion -> estructura_control .)
    FOR             reduce using rule 5 (instruccion -> estructura_control .)
    DEF             reduce using rule 5 (instruccion -> estructura_control .)
    RETURN          reduce using rule 5 (instruccion -> estructura_control .)
    PUTS            reduce using rule 5 (instruccion -> estructura_control .)
    NOT             reduce using rule 5 (instruccion -> estructura_control .)
    PAREN_IZQ       reduce using rule 5 (instruccion -> estructura_control .)
    INTEGER         reduce using rule 5 (instruccion -> estructura_control .)
    FLOAT           reduce using rule 5 (instruccion -> estructura_control .)
    STRING          reduce using rule 5 (instruccion -> estructura_control .)
    TRUE            reduce using rule 5 (instruccion -> estructura_control .)
    FALSE           reduce using rule 5 (instruccion -> estructura_control .)
    NIL             reduce using rule 5 (instruccion -> estructura_control .)
    $end            reduce using rule 5 (instruccion -> estructura_control .)
    END             reduce using rule 5 (instruccion -> estructura_control .)
    ELSE            reduce using rule 5 (instruccion -> estructura_control .)


state 6

    (6) instruccion -> declaracion_funcion .

    VARIABLE_LOCAL  reduce using rule 6 (instruccion -> declaracion_funcion .)
    CONSTANTE       reduce using rule 6 (instruccion -> declaracion_funcion .)
    IF              reduce using rule 6 (instruccion -> declaracion_funcion .)
    WHILE           reduce using rule 6 (instruccion -> declaracion_funcion .)
    FOR             reduce using rule 6 (instruccion -> declaracion_funcion .)
    DEF             reduce using rule 6 (instruccion -> declaracion_funcion .)
    RETURN          reduce using rule 6 (instruccion -> declaracion_funcion .)
    PUTS            reduce using rule 6 (instruccion -> declaracion_funcion .)
    NOT             reduce using rule 6 (instruccion -> declaracion_funcion .)
    PAREN_IZQ       reduce using rule 6 (instruccion -> declaracion_funcion .)
    INTEGER         reduce using rule 6 (instruccion -> declaracion_funcion .)
    FLOAT           reduce using rule 6 (instruccion -> declaracion_funcion .)
    STRING          reduce using rule 6 (instruccion -> declaracion_funcion .)
    TRUE            reduce using rule 6 (instruccion -> declaracion_funcion .)
    FALSE           reduce using rule 6 (instruccion -> declaracion_funcion .)
    NIL             reduce using rule 6 (instruccion -> declaracion_funcion .)
    $end            reduce using rule 6 (instruccion -> declaracion_funcion .)
    END             reduce using rule 6 (instruccion -> declaracion_funcion .)
    ELSE            reduce using rule 6 (instruccion -> declaracion_funcion .)


state 7

    (7) instruccion -> llamada_funcion .

    VARIABLE_LOCAL  reduce using rule 7 (instruccion -> llamada_funcion .)
    CONSTANTE       reduce using rule 7 (instruccion -> llamada_funcion .)
    IF              reduce using rule 7 (instruccion -> llamada_funcion .)
    WHILE           reduce using rule 7 (instruccion -> llamada_funcion .)
    FOR             reduce using rule 7 (instruccion -> llamada_funcion .)
    DEF             reduce using rule 7 (instruccion -> llamada_funcion .)
    RETURN          reduce using rule 7 (instruccion -> llamada_funcion .)
    PUTS            reduce using rule 7 (instruccion -> llamada_funcion .)
    NOT             reduce using rule 7 (instruccion -> llamada_funcion .)
    PAREN_IZQ       reduce using rule 7 (instruccion -> llamada_funcion .)
    INTEGER         reduce using rule 7 (instruccion -> llamada_funcion .)
    FLOAT           reduce using rule 7 (instruccion -> llamada_funcion .)
    STRING          reduce using rule 7 (instruccion -> llamada_funcion .)
    TRUE            reduce using rule 7 (instruccion -> llamada_funcion .)
    FALSE           reduce using rule 7 (instruccion -> llamada_funcion .)
    NIL             reduce using rule 7 (instruccion -> llamada_funcion .)
    $end            reduce using rule 7 (instruccion -> llamada_funcion .)
    END             reduce using rule 7 (instruccion -> llamada_funcion .)
    ELSE            reduce using rule 7 (instruccion -> llamada_funcion .)


state 8

    (8) instruccion -> impresion .

    VARIABLE_LOCAL  reduce using rule 8 (instruccion -> impresion .)
    CONSTANTE       reduce using rule 8 (instruccion -> impresion .)
    IF              reduce using rule 8 (instruccion -> impresion .)
    WHILE           reduce using rule 8 (instruccion -> impresion .)
    FOR             reduce using rule 8 (instruccion -> impresion .)
    DEF             reduce using rule 8 (instruccion -> impresion .)
    RETURN          reduce using rule 8 (instruccion -> impresion .)
    PUTS            reduce using rule 8 (instruccion -> impresion .)
    NOT             reduce using rule 8 (instruccion -> impresion .)
    PAREN_IZQ       reduce using rule 8 (instruccion -> impresion .)
    INTEGER         reduce using rule 8 (instruccion -> impresion .)
    FLOAT           reduce using rule 8 (instruccion -> impresion .)
    STRING          reduce using rule 8 (instruccion -> impresion .)
    TRUE            reduce using rule 8 (instruccion -> impresion .)
    FALSE           reduce using rule 8 (instruccion -> impresion .)
    NIL             reduce using rule 8 (instruccion -> impresion .)
    $end            reduce using rule 8 (instruccion -> impresion .)
    END             reduce using rule 8 (instruccion -> impresion .)
    ELSE            reduce using rule 8 (instruccion -> impresion .)


state 9

    (9) instruccion -> entrada .

    VARIABLE_LOCAL  reduce using rule 9 (instruccion -> entrada .)
    CONSTANTE       reduce using rule 9 (instruccion -> entrada .)
    IF              reduce using rule 9 (instruccion -> entrada .)
    WHILE           reduce using rule 9 (instruccion -> entrada .)
    FOR             reduce using rule 9 (instruccion -> entrada .)
    DEF             reduce using rule 9 (instruccion -> entrada .)
    RETURN          reduce using rule 9 (instruccion -> entrada .)
    PUTS            reduce using rule 9 (instruccion -> entrada .)
    NOT             reduce using rule 9 (instruccion -> entrada .)
    PAREN_IZQ       reduce using rule 9 (instruccion -> entrada .)
    INTEGER         reduce using rule 9 (instruccion -> entrada .)
    FLOAT           reduce using rule 9 (instruccion -> entrada .)
    STRING          reduce using rule 9 (instruccion -> entrada .)
    TRUE            reduce using rule 9 (instruccion -> entrada .)
    FALSE           reduce using rule 9 (instruccion -> entrada .)
    NIL             reduce using rule 9 (instruccion -> entrada .)
    $end            reduce using rule 9 (instruccion -> entrada .)
    END             reduce using rule 9 (instruccion -> entrada .)
    ELSE            reduce using rule 9 (instruccion -> entrada .)


state 10

    (10) instruccion -> expresion .
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MODULO expresion
    (19) expresion -> expresion . IGUAL_QUE expresion
    (20) expresion -> expresion . DIFERENTE expresion
    (21) expresion -> expresion . MAYOR_IGUAL expresion
    (22) expresion -> expresion . MENOR_IGUAL expresion
    (23) expresion -> expresion . MAYOR expresion
    (24) expresion -> expresion . MENOR expresion
    (25) expresion -> expresion . AND expresion
    (26) expresion -> expresion . OR expresion

    VARIABLE_LOCAL  reduce using rule 10 (instruccion -> expresion .)
    CONSTANTE       reduce using rule 10 (instruccion -> expresion .)
    IF              reduce using rule 10 (instruccion -> expresion .)
    WHILE           reduce using rule 10 (instruccion -> expresion .)
    FOR             reduce using rule 10 (instruccion -> expresion .)
    DEF             reduce using rule 10 (instruccion -> expresion .)
    RETURN          reduce using rule 10 (instruccion -> expresion .)
    PUTS            reduce using rule 10 (instruccion -> expresion .)
    NOT             reduce using rule 10 (instruccion -> expresion .)
    PAREN_IZQ       reduce using rule 10 (instruccion -> expresion .)
    INTEGER         reduce using rule 10 (instruccion -> expresion .)
    FLOAT           reduce using rule 10 (instruccion -> expresion .)
    STRING          reduce using rule 10 (instruccion -> expresion .)
    TRUE            reduce using rule 10 (instruccion -> expresion .)
    FALSE           reduce using rule 10 (instruccion -> expresion .)
    NIL             reduce using rule 10 (instruccion -> expresion .)
    $end            reduce using rule 10 (instruccion -> expresion .)
    END             reduce using rule 10 (instruccion -> expresion .)
    ELSE            reduce using rule 10 (instruccion -> expresion .)
    MAS             shift and go to state 28
    MENOS           shift and go to state 29
    POR             shift and go to state 30
    DIVIDIDO        shift and go to state 31
    MODULO          shift and go to state 32
    IGUAL_QUE       shift and go to state 33
    DIFERENTE       shift and go to state 34
    MAYOR_IGUAL     shift and go to state 35
    MENOR_IGUAL     shift and go to state 36
    MAYOR           shift and go to state 37
    MENOR           shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40


state 11

    (11) asignacion -> VARIABLE_LOCAL . ASIGNACION expresion
    (13) asignacion -> VARIABLE_LOCAL . ASIGNACION estructura_datos
    (62) llamada_funcion -> VARIABLE_LOCAL . PAREN_IZQ elementos_opt PAREN_DER
    (65) entrada -> VARIABLE_LOCAL . ASIGNACION GETS
    (35) expresion -> VARIABLE_LOCAL .

  ! shift/reduce conflict for PAREN_IZQ resolved as shift
    ASIGNACION      shift and go to state 41
    PAREN_IZQ       shift and go to state 42
    MAS             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MENOS           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    POR             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    DIVIDIDO        reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MODULO          reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    IGUAL_QUE       reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    DIFERENTE       reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MAYOR_IGUAL     reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MENOR_IGUAL     reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MAYOR           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    MENOR           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    AND             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    OR              reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    CONSTANTE       reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    IF              reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    WHILE           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    FOR             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    DEF             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    RETURN          reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    NOT             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    INTEGER         reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    FLOAT           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    STRING          reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    TRUE            reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    FALSE           reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    NIL             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    $end            reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    END             reduce using rule 35 (expresion -> VARIABLE_LOCAL .)
    ELSE            reduce using rule 35 (expresion -> VARIABLE_LOCAL .)

  ! PAREN_IZQ       [ reduce using rule 35 (expresion -> VARIABLE_LOCAL .) ]


state 12

    (12) asignacion -> CONSTANTE . ASIGNACION expresion
    (36) expresion -> CONSTANTE .
